@@ -448,6 +448,8 @@ Release 0.20.2 - Unreleased
     HDFS-579. Fix DfsTask to follow the semantics of 0.19, regarding non-zero
     return values as failures. (Christian Kunz via cdouglas)
 
+    HDFS-723. Fix deadlock in DFSClient#DFSOutputStream. (hairong)
+
 Release 0.20.1 - 2009-09-01
 
   IMPROVEMENTS
